glowing-bear/glowing-bear.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glowing-bear
  labels:
    app: glowing-bear
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glowing-bear
  template:
    metadata:
      labels:
        app: glowing-bear
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
          - containerPort: 8002
            protocol: TCP
          volumeMounts:
            - name: glowing-bear-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: glowing-bear-src
              mountPath: /usr/share/nginx/html
      volumes:
        - name: glowing-bear-config
          configMap:
            name: nginx-config
        - name: glowing-bear-src
---
apiVersion: v1
kind: Service
metadata:
  name: glowing-bear
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: glowing-bear
